{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 18,
  "lineage": "7c10b596-d467-1b09-ce51-3455aa6d2ea2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "g_ting_eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-04ff08978df4a93a4",
            "domain": "vpc",
            "id": "eipalloc-0cddfe16b0b1c4368",
            "network_interface": "eni-0a9ee92cad19c4aa3",
            "private_dns": "ip-10-0-1-92.us-east-2.compute.internal",
            "private_ip": "10.0.1.92",
            "public_dns": "ec2-3-20-135-153.us-east-2.compute.amazonaws.com",
            "public_ip": "3.20.135.153",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.gting_gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nezmur",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc20dd1da406780b",
            "arn": "arn:aws:ec2:us-east-2:319981058760:instance/i-0df90a79dd05f161c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0df90a79dd05f161c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0f8404cc11a0a60d4",
            "private_dns": "ip-172-31-32-199.us-east-2.compute.internal",
            "private_ip": "172.31.32.199",
            "public_dns": "ec2-18-223-119-10.us-east-2.compute.amazonaws.com",
            "public_ip": "18.223.119.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ba94ce67c3b38d24",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_all"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-fd32fcb1",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0add9a490940d060f"
            ]
          },
          "depends_on": [
            "aws_security_group.allow_all"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gting_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-08d29e471d6873b4f",
            "owner_id": "319981058760",
            "tags": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-0cafe5bb05dadeafd"
          },
          "depends_on": [
            "aws_vpc.g_ting"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gting_nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cddfe16b0b1c4368",
            "id": "nat-04a81544206fec62d",
            "network_interface_id": "eni-0a9ee92cad19c4aa3",
            "private_ip": "10.0.1.92",
            "public_ip": "3.20.135.153",
            "subnet_id": "subnet-0cdf7d7a48732ba5a",
            "tags": {
              "Name": "g-ting NAT"
            }
          },
          "depends_on": [
            "aws_eip.g_ting_eip",
            "aws_internet_gateway.gting_gw",
            "aws_subnet.public_subnet_us_east_2a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08d29e471d6873b4f",
            "id": "r-rtb-020cf824219a3684d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-020cf824219a3684d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.gting_gw",
            "aws_vpc.g_ting"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07348f1178c4a52521080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-04a81544206fec62d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07348f1178c4a5252",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.gting_nat",
            "aws_route_table.proute_gting"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "proute_gting",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07348f1178c4a5252",
            "owner_id": "319981058760",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-04a81544206fec62d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private route table"
            },
            "vpc_id": "vpc-0cafe5bb05dadeafd"
          },
          "depends_on": [
            "aws_vpc.g_ting"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1_subnet_us_east_2a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084f5c0cb74f8928d",
            "route_table_id": "rtb-07348f1178c4a5252",
            "subnet_id": "subnet-06649fc18b4b3dedd"
          },
          "depends_on": [
            "aws_route_table.proute_gting",
            "aws_subnet.private1_subnet_us_east_2a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2_subnet_us_east_2a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05403f8f5d55dba1e",
            "route_table_id": "rtb-07348f1178c4a5252",
            "subnet_id": "subnet-0d7df885ff229694f"
          },
          "depends_on": [
            "aws_route_table.proute_gting",
            "aws_subnet.private2_subnet_us_east_2a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_us_east_2a_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0da43e1e967fc6d",
            "route_table_id": "rtb-020cf824219a3684d",
            "subnet_id": "subnet-0cdf7d7a48732ba5a"
          },
          "depends_on": [
            "aws_subnet.public_subnet_us_east_2a",
            "aws_vpc.g_ting"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:319981058760:security-group/sg-0add9a490940d060f",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0add9a490940d060f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": null,
            "owner_id": "319981058760",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a2a368"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1_subnet_us_east_2a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:319981058760:subnet/subnet-06649fc18b4b3dedd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-06649fc18b4b3dedd",
            "map_public_ip_on_launch": true,
            "owner_id": "319981058760",
            "tags": {
              "Name": "G_ting_private1_in_east2a"
            },
            "vpc_id": "vpc-0cafe5bb05dadeafd"
          },
          "depends_on": [
            "aws_vpc.g_ting"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2_subnet_us_east_2a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:319981058760:subnet/subnet-0d7df885ff229694f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0d7df885ff229694f",
            "map_public_ip_on_launch": true,
            "owner_id": "319981058760",
            "tags": {
              "Name": "G_ting_private2_in_east2a"
            },
            "vpc_id": "vpc-0cafe5bb05dadeafd"
          },
          "depends_on": [
            "aws_vpc.g_ting"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_us_east_2a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:319981058760:subnet/subnet-0cdf7d7a48732ba5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0cdf7d7a48732ba5a",
            "map_public_ip_on_launch": true,
            "owner_id": "319981058760",
            "tags": {
              "Name": "G_public_ting_in_east2a"
            },
            "vpc_id": "vpc-0cafe5bb05dadeafd"
          },
          "depends_on": [
            "aws_vpc.g_ting"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "g_ting",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:319981058760:vpc/vpc-0cafe5bb05dadeafd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0181e0a2660a3f4f0",
            "default_route_table_id": "rtb-020cf824219a3684d",
            "default_security_group_id": "sg-01398594c0478c153",
            "dhcp_options_id": "dopt-9c362cf4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0cafe5bb05dadeafd",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-020cf824219a3684d",
            "owner_id": "319981058760",
            "tags": {
              "Name": "PubPriv_VPC"
            }
          }
        }
      ]
    }
  ]
}